# SonicMaster

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/actions/stamp-version/: action.yml
.github/workflows/: build.yml  pages.yml
app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
app/assets/data/: algid_location_map.json  character_map.json  command_library.json  device_capabilities.json  effect_library.json  effect_signatures.json  modules.json  (+1 more)
app/integration_test/: ble_reconnect_test.dart  ble_transport_test.dart  bpm_layout_visual_test.dart  bpm_test.dart  chain_reorder_test.dart  clone_amp_test.dart  clone_mode_test.dart  clone_upload_test.dart  device_live_test.dart  effect_toggle_test.dart  global_settings_test.dart  hwsync_gate_test.dart  names_gate_test.dart  param_edit_test.dart  preset_load_test.dart  save_test.dart  sync_visual_test.dart  volume_test.dart
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/rust/: Cargo.toml  rust-toolchain.toml
app/rust/src/: frb_generated.rs
app/rust/src/api/: generator.rs  mod.rs
app/rust_builder/: pubspec.yaml
app/test/: chain_order_test.dart  clo_dsp_parity_test.dart  clo_dsp_split_test.dart  data_completeness_test.dart  widget_test.dart
app/tools/: build_web.sh  run_web.sh
app/web/: dsp_level_worker.dart  index.html  manifest.json
app/windows/: CMakeLists.txt
packaging/icon/: make_icon.py
packaging/linux/: README.txt  dev.skyggedans.sonicmaster.desktop
tools/package/: linux-appimage.sh  linux-tarball.sh  macos-dmg.sh  make_icons.sh  windows-nsis.ps1
(+196 files in other folders)
